--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <!-- teams section start -->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">My teams</h2>
+            <!-- <h2 class="title">My teams</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
@@ -235,7 +235,7 @@
                         <p>I can work on HTML5, CSS3, Javascript and Bootstrap, DevOps Engineer, Kubernetes, Docker, Ansible, React.js</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
     <!-- **********Project Section Starts************* -->
 
