new projects added

--- a/index.html
+++ b/index.html
@@ -303,6 +303,22 @@
                             <a target="_blank" href="https://expensemarketingwebsite.netlify.app/"> <button class="btn btn-primary" type="button">Demo</button></a>
 
                           </div>
+                        <li><a target="_blank" href="#">Pre-School Franchise Website</a></li>
+                        <div class="d-grid gap-2 d-md-block">
+
+                            <a target="_blank" href="https://github.com/Snehil133/school_management.git"> <button class="btn btn-primary" type="button">Github</button></a>
+
+                            <a target="_blank" href="https://smilers.co.in/"> <button class="btn btn-primary" type="button">Demo</button></a>
+
+                          </div>
+                        <li><a target="_blank" href="#">AliOra (One Stop Industrial Solutions)</a></li>
+                        <div class="d-grid gap-2 d-md-block">
+
+                            <a target="_blank" href="https://github.com/Snehil133/aliora.git"> <button class="btn btn-primary" type="button">Github</button></a>
+
+                            <a target="_blank" href="https://www.aliora.co.in/"> <button class="btn btn-primary" type="button">Demo</button></a>
+
+                          </div>
                     </ul>
                 </div>
                 <div class="two">
